# PlayGo

./: .clang-format  .gitignore  BatchPolygonize.pro  CDI_PlayGo.pro  CMakeLists.txt  CamModel.h  Help build instrcutions.txt  LoadModel.h  P-Dollar.pro  P_Dollar.pri  PlayGoCore.pri  PlayGoIcon.rc  README.md  batchpolygonize.cpp  batchpolygonize.h  batchpolygonize.ui  boost.pri  build-debug.sh  build-release.sh  cdi2qtwrapper.cpp  cdicommon.cpp  cdicommon.h  cdigraphicspathitem.cpp  cdigraphicspathitem.h  cdisearchgraphicsitem.cpp  cdisearchgraphicsitem.h  cdisketchview.cpp  cdisketchview.h  cdiwindow.cpp  cdiwindow.h  clean-debug.sh  clean-release.sh  colorselectortoolbar.cpp  colorselectortoolbar.h  common.pri  component.h  converttopolygons.cpp  converttopolygons.h  credits.txt  customdebugger.h  (+47 more)
Controller/: Controller.pri  PlayGoController.h  SelectableActions.cpp  SelectableActions.h  cdState.cpp  cdState.h  connectcontroller.cpp  connectcontroller.h  mainsettings.cpp  mainsettings.h  mainsettings.ui  pinjointlimitselector.cpp  pinjointlimitselector.h  playgocontroller.cpp  sketchstate.cpp  sketchstate.h  touchandholdcontroller.cpp  touchandholdcontroller.h
Core/: .gitignore  Core.pro  FindContours.cpp  FindContours.h  PlayGoCore.pri  abstractmodelitem.cpp  abstractmodelitem.h  asmopencv.h  assembly.cpp  assembly.h  cdcontactlistener.cpp  cdcontactlistener.h  cdi2qtwrapper.cpp  cdi2qtwrapper.h  cdiboxdebugdraw.h  cdicommon.cpp  cdicommon.h  clipper.hpp  commonfunctions.cpp  commonfunctions.h  component.cpp  component.h  fileio.cpp  fileio.h  filesystemwatcher.cpp  filesystemwatcher.h  forceitem.cpp  forceitem.h  grabcut.cpp  grabcut.h  image.cpp  image.h  material.cpp  material.h  page.cpp  page.h  penstroke.cpp  penstroke.h  physicsbody.cpp  physicsbody.h  (+31 more)
EdgeDetect/: Edge Detect.pri  FindContours.cpp  FindContours.h  Source.cpp
Indexer/: indexer-main.cpp  wb2dshapedescriptor.cpp  wbbice.cpp  wbsearchengine.cpp  wbshape.cpp
Indexer-Minimal/: .gitignore  External Libraries.pri  Indexer.pri  Indexer.pro  indexer-main.cpp  optimizedsearch.h  parallelbice.h  pencv_contrib  searchengine.cpp  searchengine.h  testmain.cpp  testproject.pro  wb2dshapedescriptor.cpp  wb2dshapedescriptor.h  wbbice.cpp  wbbice.h  wbmatcher.cpp  wbmatcher.h  wbsearchengine.cpp  wbsearchengine.h  wbshape.h
P-Dollar-Recognizer/: P-Dollar-Recognizer.pro  P_Dollar.pri  gestureMain.cpp  gestureScene.cpp  gestureScene.h  gesturepoint2d.cpp  gesturepoint2d.h  gesturestroke.cpp  gesturestroke.h  pdollargesture.cpp  pdollargesture.h  pdollarrecognizer.cpp  pdollarrecognizer.h  reconizerwindow.cpp  reconizerwindow.h  reconizerwindow.ui
Physics/: .gitignore  QBox2D.pri  box2d.pro  box2dworld.cpp  box2dworld.h  qbox2dbody.h  qbox2dcommon.h  qbox2djoint.h  qbox2dworld.cpp  qbox2dworld.h
QsLog/: CMakeLists.txt  QsLog.pri  QsLog.pro  log_example.pro  main.cpp
QtTuio/: 3rdparty.pri  qTUIO.pri  (+3 more)
(+72 files in other folders)
